2010-04-16  Felix Wolfsteller <felix.wolfsteller@greenbone.net>

	* hg/hg_utils.c (hg_get_name_from_ip): Doc added. Formatting.

	* misc/bpf_share.h, misc/proctitle.c, nasl/nasl.c, omp/xml.c:
	Cosmetics.


2010-04-16  Felix Wolfsteller <felix.wolfsteller@greenbone.net>

	* configure.in: Added check for libuuid.

	* configure: Regenerated.

2010-04-15  Felix Wolfsteller <felix.wolfsteller@greenbone.net>

	Moved authentication/uuid code from openvas-manager to openvas_auth
	module.

	* misc/openvas_auth.c: Added openvas_uuid include.
	(openvas_user_uuid): Moved from openvas-manager/manage_sql.c.
	(openvas_authenticate_uuid): Moved from openvas-manager/manage_sql.c.

	* misc/openvas_auth.h (openvas_user_uuid, openvas_authenticate_uuid):
	Added headers accordingly.

2010-04-15  Felix Wolfsteller <felix.wolfsteller@greenbone.net>

	Moved duplicate code from openvas-manager and
	openvas-administrator to new module misc/openvas_uuid .

	* misc/openvas_uuid.h, misc/openvas_uuid.c: New files, containing
	duplicate code from openvas-manager/manage.c and
	openvas-administrator/admin.c . Reflect module change in function name
	change.

	* MANIFEST: Added new module.

	* misc/CMakeLists.txt: Added check for uuid library, added new module,
	install new header.

2010-04-13  Stephan Kleine

	* hg/CMakeLists.txt: Fix build with no-undefined.

	* misc/CMakeLists.txt: Fix build with no-undefined.

2010-04-13  Michael Wiegand <michael.wiegand@intevation.de>

	Post-release version bump.

	* VERSION: Set to 3.0.6.SVN.

	* doc/Doxyfile, doc/Doxyfile_full: Updated PROJECT_NUMBER.

2010-04-13  Michael Wiegand <michael.wiegand@intevation.de>

	Preparing the openvas-libraries 3.0.5 release.

	* CHANGES: Updated.

	* VERSION: Set to 3.0.5.

	* doc/Doxyfile, doc/Doxyfile_full: Updated PROJECT_NUMBER.

	* MANIFEST: Updated.

2010-04-12  Preeti Subramanian <spreeti@secpod.com>

	* nasl/nasl_packet_forgery_v6.c (nasl_tcp_v6_ping): Fixed 
	issue in packet size caluclation.
