@@ -6,7 +6,7 @@
 # Matthew Mundell <matthew.mundell@intevation.de>
 #
 # Copyright:
-# Copyright (C) 2009 Greenbone Networks GmbH
+# Copyright (C) 2009,2010 Greenbone Networks GmbH
 #
 # This program is free software; you can redistribute it and/or modify
 # it under the terms of the GNU General Public License version 2,
@@ -32,7 +32,7 @@ if (POLICY CMP0005)
    cmake_policy (SET CMP0005 OLD)
 endif (POLICY CMP0005)
 
-SET (CMAKE_BUILD_TYPE debug)
+set (CMAKE_BUILD_TYPE debug)
 
 ## Version
 
@@ -41,31 +41,31 @@ file (READ ../VERSION _OPENVASLIBBASE_VERSION)
 string (REGEX REPLACE "\\\n" "." _OPENVASLIBBASE_VERSION_STR ${_OPENVASLIBBASE_VERSION})
 string (REGEX REPLACE "\\." ";" OPENVASLIBBASE_VERSION ${_OPENVASLIBBASE_VERSION_STR})
 
-list(GET OPENVASLIBBASE_VERSION 0 OPENVASLIBBASE_MAJOR)
-list(GET OPENVASLIBBASE_VERSION 1 OPENVASLIBBASE_MINOR)
-list(GET OPENVASLIBBASE_VERSION 2 OPENVASLIBBASE_PATCH)
+list (GET OPENVASLIBBASE_VERSION 0 OPENVASLIBBASE_MAJOR)
+list (GET OPENVASLIBBASE_VERSION 1 OPENVASLIBBASE_MINOR)
+list (GET OPENVASLIBBASE_VERSION 2 OPENVASLIBBASE_PATCH)
 
 ## CPack configuration
 
-SET (CPACK_CMAKE_GENERATOR "Unix Makefiles")
-SET (CPACK_GENERATOR "TGZ")
-SET (CPACK_INSTALL_CMAKE_PROJECTS ".;openvas-libraries/base;ALL;/")
-SET (CPACK_MODULE_PATH "")
-SET (CPACK_RESOURCE_FILE_LICENSE "../COPYING")
-SET (CPACK_RESOURCE_FILE_README "README.txt")
-SET (CPACK_RESOURCE_FILE_WELCOME "README.txt")
-SET (CPACK_SOURCE_GENERATOR "TGZ")
-SET (CPACK_SOURCE_TOPLEVEL_TAG "")
-SET (CPACK_SYSTEM_NAME "")
-SET (CPACK_TOPLEVEL_TAG "")
-SET (CPACK_PACKAGE_VERSION_MAJOR ${OPENVASLIBBASE_MAJOR})
-SET (CPACK_PACKAGE_VERSION_MINOR ${OPENVASLIBBASE_MINOR})
-SET (CPACK_PACKAGE_VERSION_PATCH ${OPENVASLIBBASE_PATCH})
-SET (CPACK_PACKAGE_VERSION "${CPACK_PACKAGE_VERSION_MAJOR}.${CPACK_PACKAGE_VERSION_MINOR}.${CPACK_PACKAGE_VERSION_PATCH}")
-SET (CPACK_PACKAGE_FILE_NAME "${PROJECT_NAME}-${CPACK_PACKAGE_VERSION}")
-SET (CPACK_SOURCE_PACKAGE_FILE_NAME "${PROJECT_NAME}-${CPACK_PACKAGE_VERSION}")
-SET (CPACK_PACKAGE_VENDOR "The OpenVAS Project")
-SET (CPACK_SOURCE_IGNORE_FILES
+set (CPACK_CMAKE_GENERATOR "Unix Makefiles")
+set (CPACK_GENERATOR "TGZ")
+set (CPACK_INSTALL_CMAKE_PROJECTS ".;openvas-libraries/base;ALL;/")
+set (CPACK_MODULE_PATH "")
+set (CPACK_RESOURCE_FILE_LICENSE "../COPYING")
+set (CPACK_RESOURCE_FILE_README "README.txt")
+set (CPACK_RESOURCE_FILE_WELCOME "README.txt")
+set (CPACK_SOURCE_GENERATOR "TGZ")
+set (CPACK_SOURCE_TOPLEVEL_TAG "")
+set (CPACK_SYSTEM_NAME "")
+set (CPACK_TOPLEVEL_TAG "")
+set (CPACK_PACKAGE_VERSION_MAJOR ${OPENVASLIBBASE_MAJOR})
+set (CPACK_PACKAGE_VERSION_MINOR ${OPENVASLIBBASE_MINOR})
+set (CPACK_PACKAGE_VERSION_PATCH ${OPENVASLIBBASE_PATCH})
+set (CPACK_PACKAGE_VERSION "${CPACK_PACKAGE_VERSION_MAJOR}.${CPACK_PACKAGE_VERSION_MINOR}.${CPACK_PACKAGE_VERSION_PATCH}")
+set (CPACK_PACKAGE_FILE_NAME "${PROJECT_NAME}-${CPACK_PACKAGE_VERSION}")
+set (CPACK_SOURCE_PACKAGE_FILE_NAME "${PROJECT_NAME}-${CPACK_PACKAGE_VERSION}")
+set (CPACK_PACKAGE_VENDOR "The OpenVAS Project")
+set (CPACK_SOURCE_IGNORE_FILES
 "/.svn/"
 "/_CPack_Packages/"
 "/CMakeFiles/"
@@ -78,7 +78,7 @@ SET (CPACK_SOURCE_IGNORE_FILES
 "/doc/generated/"
 )
 
-INCLUDE(CPack)
+include (CPack)
 
 ## Variables
 
@@ -175,15 +175,5 @@ install (TARGETS openvas_base_static openvas_base_shared
          LIBRARY DESTINATION ${LIBDIR}
          ARCHIVE DESTINATION ${LIBDIR}
          PUBLIC_HEADER DESTINATION "${INCLUDEDIR}/openvas/base")
-
-## Documentation
-
-#add_subdirectory (doc)
-
-## Tests
-
-#ENABLE_TESTING ()
-
-#add_subdirectory (tests)
 
 ## End
