@@ -31,7 +31,7 @@ if (POLICY CMP0005)
    cmake_policy (SET CMP0005 OLD)
 endif (POLICY CMP0005)
 
-SET (CMAKE_BUILD_TYPE debug)
+set (CMAKE_BUILD_TYPE debug)
 
 # Version
 file (READ ../VERSION _OPENVASLIBHG_VERSION)
@@ -39,31 +39,31 @@ file (READ ../VERSION _OPENVASLIBHG_VERSION)
 string (REGEX REPLACE "\\\n" "." _OPENVASLIBHG_VERSION_STR ${_OPENVASLIBHG_VERSION})
 string (REGEX REPLACE "\\." ";" OPENVASLIBHG_VERSION ${_OPENVASLIBHG_VERSION_STR})
 
-list(GET OPENVASLIBHG_VERSION 0 OPENVASLIBHG_MAJOR)
-list(GET OPENVASLIBHG_VERSION 1 OPENVASLIBHG_MINOR)
-list(GET OPENVASLIBHG_VERSION 2 OPENVASLIBHG_PATCH)
+list (GET OPENVASLIBHG_VERSION 0 OPENVASLIBHG_MAJOR)
+list (GET OPENVASLIBHG_VERSION 1 OPENVASLIBHG_MINOR)
+list (GET OPENVASLIBHG_VERSION 2 OPENVASLIBHG_PATCH)
 
 ## CPack configuration
 
-SET (CPACK_CMAKE_GENERATOR "Unix Makefiles")
-SET (CPACK_GENERATOR "TGZ")
-SET (CPACK_INSTALL_CMAKE_PROJECTS ".;openvas-libraries/hg;ALL;/")
-SET (CPACK_MODULE_PATH "")
-SET (CPACK_RESOURCE_FILE_LICENSE "../COPYING")
-SET (CPACK_RESOURCE_FILE_README "README.txt")
-SET (CPACK_RESOURCE_FILE_WELCOME "README.txt")
-SET (CPACK_SOURCE_GENERATOR "TGZ")
-SET (CPACK_SOURCE_TOPLEVEL_TAG "")
-SET (CPACK_SYSTEM_NAME "")
-SET (CPACK_TOPLEVEL_TAG "")
-SET (CPACK_PACKAGE_VERSION_MAJOR ${OPENVASLIBHG_MAJOR})
-SET (CPACK_PACKAGE_VERSION_MINOR ${OPENVASLIBHG_MINOR})
-SET (CPACK_PACKAGE_VERSION_PATCH ${OPENVASLIBHG_PATCH})
-SET (CPACK_PACKAGE_VERSION "${CPACK_PACKAGE_VERSION_MAJOR}.${CPACK_PACKAGE_VERSION_MINOR}.${CPACK_PACKAGE_VERSION_PATCH}")
-SET (CPACK_PACKAGE_FILE_NAME "${PROJECT_NAME}-${CPACK_PACKAGE_VERSION}")
-SET (CPACK_SOURCE_PACKAGE_FILE_NAME "${PROJECT_NAME}-${CPACK_PACKAGE_VERSION}")
-SET (CPACK_PACKAGE_VENDOR "The OpenVAS Project")
-SET (CPACK_SOURCE_IGNORE_FILES
+set (CPACK_CMAKE_GENERATOR "Unix Makefiles")
+set (CPACK_GENERATOR "TGZ")
+set (CPACK_INSTALL_CMAKE_PROJECTS ".;openvas-libraries/hg;ALL;/")
+set (CPACK_MODULE_PATH "")
+set (CPACK_RESOURCE_FILE_LICENSE "../COPYING")
+set (CPACK_RESOURCE_FILE_README "README.txt")
+set (CPACK_RESOURCE_FILE_WELCOME "README.txt")
+set (CPACK_SOURCE_GENERATOR "TGZ")
+set (CPACK_SOURCE_TOPLEVEL_TAG "")
+set (CPACK_SYSTEM_NAME "")
+set (CPACK_TOPLEVEL_TAG "")
+set (CPACK_PACKAGE_VERSION_MAJOR ${OPENVASLIBHG_MAJOR})
+set (CPACK_PACKAGE_VERSION_MINOR ${OPENVASLIBHG_MINOR})
+set (CPACK_PACKAGE_VERSION_PATCH ${OPENVASLIBHG_PATCH})
+set (CPACK_PACKAGE_VERSION "${CPACK_PACKAGE_VERSION_MAJOR}.${CPACK_PACKAGE_VERSION_MINOR}.${CPACK_PACKAGE_VERSION_PATCH}")
+set (CPACK_PACKAGE_FILE_NAME "${PROJECT_NAME}-${CPACK_PACKAGE_VERSION}")
+set (CPACK_SOURCE_PACKAGE_FILE_NAME "${PROJECT_NAME}-${CPACK_PACKAGE_VERSION}")
+set (CPACK_PACKAGE_VENDOR "The OpenVAS Project")
+set (CPACK_SOURCE_IGNORE_FILES
 "/.svn/"
 "/_CPack_Packages/"
 "/CMakeFiles/"
@@ -77,7 +77,7 @@ SET (CPACK_SOURCE_IGNORE_FILES
 "test.c"
 )
 
-INCLUDE(CPack)
+include (CPack)
 
 ## Variables
 
@@ -177,16 +177,4 @@ install (TARGETS openvas_hg_static openvas_hg_shared
          ARCHIVE DESTINATION ${LIBDIR}
          PUBLIC_HEADER DESTINATION "${INCLUDEDIR}/openvas/hg")
 
-
-#documentation
-
-#add_subdirectory (doc)
-
-## Tests
-
-#ENABLE_TESTING ()
-
-#add_subdirectory (tests)
-
 ## End
-
