@@ -31,7 +31,7 @@ if (POLICY CMP0005)
    cmake_policy (SET CMP0005 OLD)
 endif (POLICY CMP0005)
 
-SET (CMAKE_BUILD_TYPE debug)
+set (CMAKE_BUILD_TYPE debug)
 
 # Version
 file (READ ../VERSION  _OPENVASLIBMISC_VERSION)
@@ -39,31 +39,31 @@ file (READ ../VERSION  _OPENVASLIBMISC_VERSION)
 string (REGEX REPLACE "\\\n" "." _OPENVASLIBMISC_VERSION_STR ${_OPENVASLIBMISC_VERSION})
 string (REGEX REPLACE "\\." ";" OPENVASLIBMISC_VERSION ${_OPENVASLIBMISC_VERSION_STR})
 
-list(GET OPENVASLIBMISC_VERSION 0 OPENVASLIBMISC_MAJOR)
-list(GET OPENVASLIBMISC_VERSION 1 OPENVASLIBMISC_MINOR)
-list(GET OPENVASLIBMISC_VERSION 2 OPENVASLIBMISC_PATCH)
+list (GET OPENVASLIBMISC_VERSION 0 OPENVASLIBMISC_MAJOR)
+list (GET OPENVASLIBMISC_VERSION 1 OPENVASLIBMISC_MINOR)
+list (GET OPENVASLIBMISC_VERSION 2 OPENVASLIBMISC_PATCH)
 
 ## CPack configuration
 
-SET (CPACK_CMAKE_GENERATOR "Unix Makefiles")
-SET (CPACK_GENERATOR "TGZ")
-SET (CPACK_INSTALL_CMAKE_PROJECTS ".;openvas-libraries/misc;ALL;/")
-SET (CPACK_MODULE_PATH "")
-SET (CPACK_RESOURCE_FILE_LICENSE "../COPYING")
-SET (CPACK_RESOURCE_FILE_README "README.txt")
-SET (CPACK_RESOURCE_FILE_WELCOME "README.txt")
-SET (CPACK_SOURCE_GENERATOR "TGZ")
-SET (CPACK_SOURCE_TOPLEVEL_TAG "")
-SET (CPACK_SYSTEM_NAME "")
-SET (CPACK_TOPLEVEL_TAG "")
-SET (CPACK_PACKAGE_VERSION_MAJOR ${OPENVASLIBMISC_MAJOR})
-SET (CPACK_PACKAGE_VERSION_MINOR ${OPENVASLIBMISC_MINOR})
-SET (CPACK_PACKAGE_VERSION_PATCH ${OPENVASLIBMISC_PATCH})
-SET (CPACK_PACKAGE_VERSION "${CPACK_PACKAGE_VERSION_MAJOR}.${CPACK_PACKAGE_VERSION_MINOR}.${CPACK_PACKAGE_VERSION_PATCH}")
-SET (CPACK_PACKAGE_FILE_NAME "${PROJECT_NAME}-${CPACK_PACKAGE_VERSION}")
-SET (CPACK_SOURCE_PACKAGE_FILE_NAME "${PROJECT_NAME}-${CPACK_PACKAGE_VERSION}")
-SET (CPACK_PACKAGE_VENDOR "The OpenVAS Project")
-SET (CPACK_SOURCE_IGNORE_FILES
+set (CPACK_CMAKE_GENERATOR "Unix Makefiles")
+set (CPACK_GENERATOR "TGZ")
+set (CPACK_INSTALL_CMAKE_PROJECTS ".;openvas-libraries/misc;ALL;/")
+set (CPACK_MODULE_PATH "")
+set (CPACK_RESOURCE_FILE_LICENSE "../COPYING")
+set (CPACK_RESOURCE_FILE_README "README.txt")
+set (CPACK_RESOURCE_FILE_WELCOME "README.txt")
+set (CPACK_SOURCE_GENERATOR "TGZ")
+set (CPACK_SOURCE_TOPLEVEL_TAG "")
+set (CPACK_SYSTEM_NAME "")
+set (CPACK_TOPLEVEL_TAG "")
+set (CPACK_PACKAGE_VERSION_MAJOR ${OPENVASLIBMISC_MAJOR})
+set (CPACK_PACKAGE_VERSION_MINOR ${OPENVASLIBMISC_MINOR})
+set (CPACK_PACKAGE_VERSION_PATCH ${OPENVASLIBMISC_PATCH})
+set (CPACK_PACKAGE_VERSION "${CPACK_PACKAGE_VERSION_MAJOR}.${CPACK_PACKAGE_VERSION_MINOR}.${CPACK_PACKAGE_VERSION_PATCH}")
+set (CPACK_PACKAGE_FILE_NAME "${PROJECT_NAME}-${CPACK_PACKAGE_VERSION}")
+set (CPACK_SOURCE_PACKAGE_FILE_NAME "${PROJECT_NAME}-${CPACK_PACKAGE_VERSION}")
+set (CPACK_PACKAGE_VENDOR "The OpenVAS Project")
+set (CPACK_SOURCE_IGNORE_FILES
 "/.svn/"
 "/_CPack_Packages/"
 "/CMakeFiles/"
@@ -76,7 +76,7 @@ SET (CPACK_SOURCE_IGNORE_FILES
 "/doc/generated/"
 )
 
-INCLUDE(CPack)
+include (CPack)
 
 ## Variables
 message ("-- Variables will set...")
@@ -128,8 +128,8 @@ message ("-- Install prefix: ${CMAKE_INSTALL_PREFIX}")
 
 ## Pass-throughs
 
-include_directories(../include)
-include_directories(../base)
+include_directories (../include)
+include_directories (../base)
 
 ## Config
 
@@ -146,7 +146,7 @@ endif (NOT UUID)
 
 # Library
 
-message("-- prepare for add libraries ...")
+message ("-- prepare for add libraries ...")
 set (CMAKE_C_FLAGS_DEBUG        "${CMAKE_C_FLAGS_DEBUG} -Wall -fPIC")
 set (CMAKE_C_FLAGS              "${CMAKE_C_FLAGS} -Wall -fPIC")
 
