@@ -42,9 +42,9 @@ file (READ ../VERSION _OPENVASLIBNASL_VERSION)
 string (REGEX REPLACE "\\\n" "." _OPENVASLIBNASL_VERSION_STR ${_OPENVASLIBNASL_VERSION})
 string (REGEX REPLACE "\\." ";" OPENVASLIBNASL_VERSION ${_OPENVASLIBNASL_VERSION_STR})
 
-list(GET OPENVASLIBNASL_VERSION 0 OPENVASLIBNASL_MAJOR)
-list(GET OPENVASLIBNASL_VERSION 1 OPENVASLIBNASL_MINOR)
-list(GET OPENVASLIBNASL_VERSION 2 OPENVASLIBNASL_PATCH)
+list (GET OPENVASLIBNASL_VERSION 0 OPENVASLIBNASL_MAJOR)
+list (GET OPENVASLIBNASL_VERSION 1 OPENVASLIBNASL_MINOR)
+list (GET OPENVASLIBNASL_VERSION 2 OPENVASLIBNASL_PATCH)
 
 ## CPack configuration
 
@@ -237,15 +237,5 @@ install (TARGETS openvas_nasl_static openvas_nasl_shared openvas-nasl
          LIBRARY DESTINATION ${LIBDIR}
          ARCHIVE DESTINATION ${LIBDIR}
          PUBLIC_HEADER DESTINATION "${INCLUDEDIR}/openvas/nasl")
-
-## Documentation
-
-#add_subdirectory (doc)
-
-## Tests
-
-#ENABLE_TESTING ()
-
-#add_subdirectory (tests)
 
 ## End
